# vyakti

./: .gitignore  BUILD_FIXES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  GPU_AND_CHAT_FEATURES.md  IMPLEMENTATION_PLAN.md  LICENSE  LLAMA_CPP_INTEGRATION_PLAN.md  README.md
LEANN/: .gitmodules  README.md  llms.txt  pyproject.toml
LEANN/apps/: base_rag_example.py  chatgpt_rag.py  claude_rag.py  imessage_rag.py  slack_rag.py
LEANN/apps/chatgpt_data/: chatgpt_reader.py
LEANN/apps/chunking/: __init__.py
LEANN/apps/claude_data/: claude_reader.py
LEANN/apps/history_data/: history.py
LEANN/apps/imessage_data/: __init__.py  imessage_reader.py
LEANN/apps/multimodal/vision-based-pdf-multi-vector/: README.md  multi-vector-leann-paper-example.py
LEANN/apps/semantic_file_search/: leann-plus-temporal-search.py  leann_index_builder.py  spotlight_index_dump.py
LEANN/apps/slack_data/: __init__.py  slack_mcp_reader.py
LEANN/apps/twitter_data/: __init__.py  twitter_mcp_reader.py
LEANN/benchmarks/: llm_utils.py
LEANN/benchmarks/enron_emails/: README.md  evaluate_enron_emails.py
LEANN/benchmarks/financebench/: README.md  evaluate_financebench.py
LEANN/benchmarks/laion/: README.md  evaluate_laion.py
LEANN/benchmarks/update/: README.md  __init__.py  bench_hnsw_rng_recompute.py  bench_results.csv  bench_update_vs_offline_search.py  offline_vs_update.csv  plot_bench_results.py
LEANN/docs/: ast_chunking_guide.md  grep_search.md  slack-setup-guide.md
LEANN/examples/: grep_search_example.py
LEANN/tests/: test_astchunk_integration.py  test_cli_ask.py  test_embedding_server_manager.py
crates/vyakti-backend-diskann/: Cargo.toml
crates/vyakti-backend-diskann/benches/: diskann_search.rs
crates/vyakti-backend-diskann/src/: graph.rs  lib.rs  pq.rs
crates/vyakti-backend-hnsw/: Cargo.toml
crates/vyakti-backend-hnsw/benches/: hnsw_search.rs
crates/vyakti-backend-hnsw/src/: builder.rs  graph.rs  lib.rs  pruning.rs  searcher.rs
crates/vyakti-chunking/: Cargo.toml
crates/vyakti-chunking/src/: ast.rs  chunker.rs  file_reader.rs  lib.rs  token.rs
crates/vyakti-cli/: Cargo.toml
crates/vyakti-cli/src/: main.rs
crates/vyakti-common/: Cargo.toml
crates/vyakti-common/src/: config.rs  error.rs  lib.rs  metadata_filter.rs  traits.rs  types.rs
crates/vyakti-core/: Cargo.toml
crates/vyakti-core/.vyakti-test/: metadata-filter-compound-test  metadata-filter-contains-test  metadata-filter-gt-test  metadata-filter-in-test  metadata-filter-test
crates/vyakti-core/benches/: compact_mode_benchmark.rs  hybrid_search_benchmark.rs
crates/vyakti-core/src/: builder.rs  chat.rs  evaluation.rs  hybrid.rs  lib.rs  persistence.rs  searcher.rs
crates/vyakti-core/tests/: hybrid_search_integration_test.rs  metadata_filtering_integration_test.rs  validation_test.rs
crates/vyakti-embedding/: Cargo.toml
crates/vyakti-embedding/src/: cache.rs  download.rs  lib.rs  providers.rs  recomputation.rs
crates/vyakti-embedding/src/providers/: llama_cpp.rs  mock.rs  mod.rs
crates/vyakti-embedding/tests/: test_llama_cpp.rs  test_llama_cpp_gpu.rs
crates/vyakti-keyword/: Cargo.toml
crates/vyakti-keyword/src/: builder.rs  lib.rs  searcher.rs  types.rs
crates/vyakti-proto/: Cargo.toml
crates/vyakti-proto/src/: lib.rs
crates/vyakti-server/: Cargo.toml
crates/vyakti-server/src/: grpc_server.rs  lib.rs  main.rs  rest.rs
crates/vyakti-storage/: Cargo.toml
crates/vyakti-storage/src/: csr.rs  index.rs  lib.rs
document/: BRD.md  MODULAR_DESIGN.md
evaluation/: README.md
evaluation/scripts/: compare.sh  evaluate.sh  optimize.sh
mcp-server/: Cargo.toml  README.md
mcp-server/src/: main.rs
