[package]
name = "vyakti-backend-diskann"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
vyakti-common = { path = "../vyakti-common" }
vyakti-storage = { path = "../vyakti-storage" }

tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
rand.workspace = true
rayon.workspace = true
ndarray.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "diskann_search"
harness = false
