[package]
name = "vyakti-chunking"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Text processing
regex = "1.10"
unicode-segmentation = "1.11"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Async
tokio = { workspace = true, optional = true }

# Tree-sitter for AST parsing (optional)
tree-sitter = { version = "0.20", optional = true }
tree-sitter-python = { version = "0.20", optional = true }
tree-sitter-java = { version = "0.20", optional = true }
tree-sitter-typescript = { version = "0.20", optional = true }
tree-sitter-rust = { version = "0.20", optional = true }
tree-sitter-c-sharp = { version = "0.20", optional = true }
tree-sitter-javascript = { version = "0.20", optional = true }
tree-sitter-go = { version = "0.20", optional = true }
tree-sitter-c = { version = "0.20", optional = true }
tree-sitter-cpp = { version = "0.20", optional = true }
tree-sitter-swift = { version = "0.3", optional = true }
tree-sitter-kotlin = { version = "0.2", optional = true }
tree-sitter-ruby = { version = "0.20", optional = true }
tree-sitter-php = { version = "0.20", optional = true }

# Text format parsers (optional)
pulldown-cmark = { version = "0.9", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
csv = { version = "1.3", optional = true }
html2text = { version = "0.12", optional = true }

# Document format parsers (optional)
pdf-extract = { version = "0.7", optional = true }
docx-rs = { version = "0.4", optional = true }
calamine = { version = "0.24", optional = true, features = ["dates"] }
zip = { version = "0.6", optional = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.8"

[features]
default = ["text-formats"]

# Core AST support for existing languages
ast = [
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-java",
    "tree-sitter-typescript",
    "tree-sitter-rust",
    "tree-sitter-c-sharp"
]

# Extended AST support for additional languages
ast-extended = [
    "ast",
    "tree-sitter-javascript",
    "tree-sitter-go",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-swift",
    "tree-sitter-kotlin",
    "tree-sitter-ruby",
    "tree-sitter-php"
]

# Text format support
text-formats = [
    "pulldown-cmark",
    "serde_yaml",
    "toml",
    "csv",
    "html2text"
]

# Document format support
document-formats = [
    "pdf-extract",
    "docx-rs",
    "calamine",
    "zip"
]

# All formats enabled
all-formats = [
    "ast-extended",
    "text-formats",
    "document-formats"
]

async = ["tokio"]
