[package]
name = "vyakti-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "vyakti"
path = "src/main.rs"

[dependencies]
vyakti-common = { path = "../vyakti-common" }
vyakti-core = { path = "../vyakti-core" }
vyakti-backend-hnsw = { path = "../vyakti-backend-hnsw" }

tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
