[package]
name = "vyakti-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "vyakti"
path = "src/main.rs"

[features]
default = ["all-formats", "ast-extended", "llama-cpp"]
ast = ["vyakti-chunking/ast"]
ast-extended = ["vyakti-chunking/ast-extended"]
text-formats = ["vyakti-chunking/text-formats"]
document-formats = ["vyakti-chunking/document-formats"]
all-formats = ["vyakti-chunking/all-formats"]
llama-cpp = ["vyakti-embedding/llama-cpp"]

[dependencies]
vyakti-common = { path = "../vyakti-common" }
vyakti-core = { path = "../vyakti-core" }
vyakti-backend-hnsw = { path = "../vyakti-backend-hnsw" }
vyakti-embedding = { path = "../vyakti-embedding" }
vyakti-chunking = { path = "../vyakti-chunking" }
vyakti-keyword = { path = "../vyakti-keyword" }

tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
num_cpus.workspace = true
walkdir = "2.4"

[dev-dependencies]
