[package]
name = "vyakti-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
num_cpus.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
