[package]
name = "vyakti-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
vyakti-common = { path = "../vyakti-common" }
vyakti-core = { path = "../vyakti-core" }
vyakti-proto = { path = "../vyakti-proto" }

tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# gRPC
tonic.workspace = true

# Metrics
prometheus.workspace = true

# Config
config.workspace = true

[dev-dependencies]
